--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+	"release": "auto shipit --base-branch=main"
   },
   "files": [
 	  "dist"
