--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cmnjg-sb",
+  "author": "fikryfahrezy",
   "version": "0.1.1",
   "repository": "https://github.com/fikryfahrezy/cmnjg-sb.git",
   "scripts": {
@@ -10,7 +11,7 @@
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
     "prettier": "prettier --write .",
-	"release": "auto shipit --base-branch=main"
+	"release": "auto shipit --base-branch=main --email"
   },
   "files": [
 	  "dist"
@@ -46,7 +47,6 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -72,6 +72,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "auto": "^10.32.6",
+    "react-scripts": "5.0.0",
     "cross-env": "^7.0.3",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5",
