--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,3 +31,9 @@ jobs:
           npm ci
           npm run build
           npm run release ${{ secrets.GIT_EMAIL }}
+      - name: Publish to Chromatic
+        uses: chromaui/action@v1
+        # Chromatic GitHub Action options
+        with:
+          # 👇 Chromatic projectToken, refer to the manage page to obtain it.
+          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
