--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
     "prettier": "prettier --write .",
-    "release": "auto shipit --base-branch=main --email"
+    "release": "auto shipit --base-branch=main --email",
+    "chromatic": "chromatic --project-token="
   },
   "files": [
     "dist"
@@ -77,6 +78,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "auto": "^10.32.6",
+    "chromatic": "^6.4.3",
     "cross-env": "^7.0.3",
     "prettier": "^2.5.1",
     "react-scripts": "5.0.0",
