--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,22 +1,33 @@
 # Name of our action
-name: "Chromatic"
-# The event that will trigger the action
-on: push
+name: Release
 
-# What the action will do
+# The event that will trigger the action
+on:
+  push:
+    branches: [main]
+
+# what the action will do
 jobs:
-  test:
+  release:
     # The operating system it will run on
     runs-on: ubuntu-latest
+    # This check needs to be in place to prevent a publish loop with auto and github actions
+    if: "!contains(github.event.head_commit.message, 'ci skip') && !contains(github.event.head_commit.message, 'skip ci')"
     # The list of steps that the action will go through
     steps:
-      - uses: actions/checkout@v1
-      - run: yarn
-      - run: yarn test
-        #👇 Adds Chromatic as a step in the workflow
-      - uses: chromaui/action@v1
-        # Options required for Chromatic's GitHub Action
+      - uses: actions/checkout@v2
+      - name: Prepare repository
+        run: git fetch --unshallow --tags
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v2
         with:
-          #👇 Chromatic projectToken, see https://storybook.js.org/tutorials/design-systems-for-developers/react/en/review/ to obtain it
-          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          token: ${{ secrets.GH_TOKEN }}
+          node-version: 12.x
+      - name: Create Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          #👇 npm token, see https://storybook.js.org/tutorials/design-systems-for-developers/react/en/distribute/ to obtain it
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          npm ci
+          npm run build
+          npm run release
