--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
     "@storybook/testing-react": "^1.2.3",
+    "@svgr/rollup": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
