--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "repository": "https://github.com/fikryfahrezy/cmnjg-sb.git",
   "license": "MIT",
   "source": "src/index.tsx",
-  "module": "dist/index.js",
+  "main": "dist/index.js",
+  "module": "dist/es/index.js",
   "types": "dist/index.d.ts",
-  "style": "dist/index.css",
   "files": [
     "dist"
   ],
