--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,7 +4,17 @@ name: Release
 # The event that will trigger the action
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+    paths:
+      - ".github/**"
+      - "src/**"
+  pull_request:
+    branches:
+      - main
+    paths:
+      - ".github/**"
+      - "src/**"
 
 # what the action will do
 jobs:
@@ -13,7 +23,9 @@ jobs:
     runs-on: ubuntu-latest
     # The list of steps that the action will go through
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - run: yarn
       - run: yarn test
         #👇 Adds Chromatic as a step in the workflow
@@ -32,7 +44,7 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'ci skip') && !contains(github.event.head_commit.message, 'skip ci')"
     # The list of steps that the action will go through
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Prepare repository
         run: git fetch --unshallow --tags
       - name: Use Node.js 12.x
