--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm install
 
       # - name: Test
-      #   run: pnpm test
+      #   run: npm test
 
         #👇 Adds Chromatic as a step in the workflow
       - uses: chromaui/action@v1
@@ -52,10 +52,11 @@ jobs:
       - uses: actions/checkout@v3
       - name: Prepare repository
         run: git fetch --unshallow --tags
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v2
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v3
         with:
-          node-version: 12.x
+          node-version: 18.x
+          cache: 'npm'
       - name: Create Release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
