--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -52,11 +52,33 @@ jobs:
       - uses: actions/checkout@v3
       - name: Prepare repository
         run: git fetch --unshallow --tags
-      - name: Use Node.js 18.x
+
+      - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18.x
-          cache: 'npm'
+          node-version: 18
+
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        id: pnpm-install
+        with:
+          version: 7
+          run_install: false
+
+      - name: Get pnpm store directory
+        id: pnpm-cache
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
       - name: Create Release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
@@ -64,6 +86,6 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GH_EMAIL: ${{ secrets.GIT_EMAIL }}
         run: |
-          npm ci
-          npm run build
-          npm run release $GIT_EMAIL
+          pnpm install
+          pnpm build
+          pnpm release $GIT_EMAIL
