--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:parcel:exp": "parcel build",
-    "build": "rollup --config rollup.config.ts",
+    "build": "npm run clean && rollup --config rollup.config.ts",
     "dev": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "prettier": "prettier --write .",
     "release": "auto shipit --base-branch=main --email",
     "ts:check": "tsc --noEmit",
     "unimported": "unimported",
-    "purgecss": "node ./scripts/css-purger.mjs"
+    "purgecss": "node ./scripts/css-purger.mjs",
+    "clean": "rimraf dist"
   },
   "eslintConfig": {
     "extends": [
@@ -58,8 +58,6 @@
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@mdx-js/react": "^2.1.2",
-    "@parcel/packager-ts": "^2.6.2",
-    "@parcel/transformer-typescript-types": "^2.6.2",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-image": "^2.1.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
@@ -90,13 +88,13 @@
     "autoprefixer": "^10.4.7",
     "chromatic": "^6.7.0",
     "cross-env": "^7.0.3",
-    "parcel": "^2.6.2",
     "prettier": "^2.7.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.1",
+    "rimraf": "^4.1.2",
     "rollup": "2.67.2",
-    "rollup-plugin-postcss": "4.0.2",
+    "rollup-plugin-styles": "^4.0.0",
     "rollup-plugin-terser": "7.0.2",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
