--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "jsx": "react",
     "declaration": true,
     "declarationDir": "dist",
-    "emitDeclarationOnly": true
+    // "emitDeclarationOnly": true
   },
   "include": ["src"],
   "exclude": [
