update github workflows to watch rollup config

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,12 +9,14 @@ on:
     paths:
       - ".github/**"
       - "src/**"
+      - "rollup.config.ts"
   pull_request:
     branches:
       - main
     paths:
       - ".github/**"
       - "src/**"
+      - "rollup.config.ts"
 
 # what the action will do
 jobs:
