--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build": "npm run clean && rollup --config rollup.config.ts",
-    "dev": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
     "prettier": "prettier --write .",
     "release": "auto shipit --base-branch=main --email",
     "ts:check": "tsc --noEmit",
@@ -56,36 +54,15 @@
     "@chakra-ui/system": "^2.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
-    "@mdx-js/react": "^2.1.2",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-image": "^2.1.1",
-    "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
-    "@rollup/plugin-url": "^7.0.0",
-    "@storybook/addon-a11y": "^6.5.9",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-interactions": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/builder-webpack5": "^6.5.9",
-    "@storybook/manager-webpack5": "^6.5.9",
-    "@storybook/mdx2-csf": "^0.0.3",
-    "@storybook/node-logger": "^6.5.9",
-    "@storybook/preset-create-react-app": "^4.1.2",
-    "@storybook/react": "^6.5.9",
-    "@storybook/testing-library": "^0.0.13",
-    "@storybook/testing-react": "^1.3.0",
     "@svgr/rollup": "6.2.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.1",
-    "@types/jest": "^28.1.4",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "auto": "^10.37.1",
     "autoprefixer": "^10.4.7",
-    "chromatic": "^6.7.0",
     "cross-env": "^7.0.3",
     "prettier": "^2.7.1",
     "react": "^18.0.0",
@@ -97,7 +74,6 @@
     "rollup-plugin-terser": "7.0.2",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "unimported": "^1.21.0",
-    "webpack": "^5.73.0"
+    "unimported": "^1.21.0"
   }
 }
