--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react",
-    "declaration": true,
-    "declarationDir": "dist",
-    // "emitDeclarationOnly": true
+    "declaration": true
   },
   "include": ["src"],
   "exclude": [
