--- a/package.json
+++ b/package.json
@@ -4,77 +4,8 @@
   "version": "0.1.27",
   "repository": "https://github.com/fikryfahrezy/cmnjg-sb.git",
   "license": "MIT",
-  "source": "src/index.tsx",
-  "main": "dist/index.js",
-  "module": "dist/es/index.js",
-  "files": [
-    "dist"
-  ],
   "scripts": {
-    "start": "react-scripts start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build": "npm run clean && rollup --config rollup.config.ts",
-    "prettier": "prettier --write .",
-    "release": "auto shipit --base-branch=main --email",
-    "ts:check": "tsc --noEmit",
-    "unimported": "unimported",
-    "purgecss": "node ./scripts/css-purger.mjs",
-    "clean": "rimraf dist"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "**/*.stories.*"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      }
-    ]
-  },
-  "browserslist": "> 0.5%, last 2 versions, not dead",
-  "peerDependencies": {
-    "@chakra-ui/system": "^2.0.0",
-    "@emotion/react": "^11.0.0",
-    "@emotion/styled": "^11.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
-  },
-  "dependencies": {
-    "cheerio": "1.0.0-rc.12",
-    "react-icons": "^4.8.0"
-  },
-  "devDependencies": {
-    "@chakra-ui/system": "^2.5.5",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-image": "^2.1.1",
-    "@rollup/plugin-typescript": "^8.5.0",
-    "@svgr/rollup": "6.2.1",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.31",
-    "@types/react-dom": "^18.0.11",
-    "auto": "^10.43.0",
-    "autoprefixer": "^10.4.14",
-    "cross-env": "^7.0.3",
-    "import-cwd": "^3.0.0",
-    "prettier": "^2.8.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "rimraf": "^4.4.1",
-    "rollup": "2.67.2",
-    "rollup-plugin-terser": "7.0.2",
-    "rollup-pluginutils": "^2.8.2",
-    "tslib": "^2.5.0",
-    "typescript": "^4.9.5",
-    "unimported": "^1.26.0"
+    "build": "pnpm -r --filter='./packages/*' run build",
+    "release": "pnpm -r --filter='./packages/cmnjg-sb' run release"
   }
 }
