--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "license": "MIT",
   "scripts": {
     "build": "pnpm -r --filter='./packages/*' run build",
-    "release": "pnpm -r --filter='./packages/cmnjg-sb' run release"
+    "release": "pnpm -r --filter='./packages/components' run release"
   }
 }
