--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,28 @@
 /node_modules
 /.pnp
 .pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+/dist
+/storybook-static
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+build-storybook.log
+
+.parcel-cache
+.rollup.cache
+tsconfig.tsbuildinfo
