--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -18,20 +18,7 @@ on:
 
 # what the action will do
 jobs:
-  test:
-    # The operating system it will run on
-    runs-on: ubuntu-latest
-    # The list of steps that the action will go through
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Install dependencies
-        run: npm install
-
   release:
-    needs: test
     # The operating system it will run on
     runs-on: ubuntu-latest
     # This check needs to be in place to prevent a publish loop with auto and github actions
@@ -71,10 +58,8 @@ jobs:
       - name: Create Release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          #👇 npm token, see https://storybook.js.org/tutorials/design-systems-for-developers/react/en/distribute/ to obtain it
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GH_EMAIL: ${{ secrets.GIT_EMAIL }}
         run: |
-          pnpm install
-          pnpm build
+          pnpm install --no-frozen-lockfile
           pnpm release $GIT_EMAIL
