--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -61,5 +61,5 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GH_EMAIL: ${{ secrets.GIT_EMAIL }}
         run: |
-          pnpm install --no-frozen-lockfile
+          pnpm install
           pnpm release $GIT_EMAIL
