chore: update github ci

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,12 +9,16 @@ on:
     paths:
       - ".github/**"
       - "src/**"
+      - "package.json"
+      - "pnpm-lock.yaml"
   pull_request:
     branches:
       - main
     paths:
       - ".github/**"
       - "src/**"
+      - "package.json"
+      - "pnpm-lock.yaml"
 
 # what the action will do
 jobs:
