chore: update github ci

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -65,6 +65,5 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GH_EMAIL: ${{ secrets.GIT_EMAIL }}
         run: |
-          pnpm install --no-frozen-lockfile
-          git restore pnpm-lock.yaml
+          pnpm install
           pnpm release $GIT_EMAIL
