chore: update lock file, package json, and github ci

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -66,4 +66,5 @@ jobs:
           GH_EMAIL: ${{ secrets.GIT_EMAIL }}
         run: |
           pnpm install
+          pnpm build
           pnpm release $GIT_EMAIL
