--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,19 +6,6 @@ on:
   push:
     branches:
       - main
-    paths:
-      - ".github/**"
-      - "src/**"
-      - "package.json"
-      - "pnpm-lock.yaml"
-  pull_request:
-    branches:
-      - main
-    paths:
-      - ".github/**"
-      - "src/**"
-      - "package.json"
-      - "pnpm-lock.yaml"
 
 # what the action will do
 jobs:
@@ -30,34 +17,17 @@ jobs:
     # The list of steps that the action will go through
     steps:
       - uses: actions/checkout@v3
-      - name: Prepare repository
-        run: git fetch --unshallow --tags
+        with:
+          fetch-depth: 0
 
-      - name: Install Node.js
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+
+      - name: Set node
         uses: actions/setup-node@v3
         with:
-          node-version: 18
-
-      - uses: pnpm/action-setup@v2
-        name: Install pnpm
-        id: pnpm-install
-        with:
-          version: 7
-          run_install: false
-
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
-
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
-        with:
-          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+          node-version: 18.x
+          cache: pnpm
 
       - name: Create Release
         env:
