--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cmnjg-sb",
   "author": "fikryfahrezy",
   "version": "0.1.29",
+  "packageManager": "pnpm@8.1.0",
   "repository": "https://github.com/fikryfahrezy/cmnjg-sb.git",
   "license": "MIT",
   "scripts": {
@@ -46,7 +47,6 @@
     "unimported": "^1.26.0"
   },
   "sideEffects": [
-    "**/*.css",
-    "./dist/index.js"
+    "**/*.css"
   ]
 }
